[gd_scene load_steps=22 format=3 uid="uid://dldjoxoxs212t"]

[ext_resource type="Script" path="res://Scripts/iluminado.gd" id="1_ra42g"]
[ext_resource type="PackedScene" uid="uid://bg86ff6lnnk5s" path="res://Escenas/sensor.tscn" id="2_ci1ri"]
[ext_resource type="Texture2D" uid="uid://de1pbl563oj5j" path="res://Sprites/Final/LIGHT_animation.png" id="3_h2dia"]
[ext_resource type="AudioStream" uid="uid://dy2erjs3mv07s" path="res://audio/SFX/luminosos_idle_y_caminando_loop.wav" id="4_6y3l8"]
[ext_resource type="Texture2D" uid="uid://cladap4cvjeuj" path="res://Sprites/Dwarf/Area-iluminadot.png" id="4_jvke4"]
[ext_resource type="Shader" path="res://Shaders/trabajador.gdshader" id="5_fk6kd"]
[ext_resource type="Texture2D" uid="uid://ddaq1fkr8ld8n" path="res://Sprites/Alma.png" id="6_li1no"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w8b4w"]
size = Vector3(0.38, 0.05, 0.35)

[sub_resource type="Animation" id="Animation_l55uh"]
resource_name = "Atacar"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 16, 15]
}

[sub_resource type="Animation" id="Animation_dsspr"]
resource_name = "Destruir"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 16, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"picar"
}]
}

[sub_resource type="Animation" id="Animation_xisp1"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 49]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 26.5814,
"start_offset": 0.0,
"stream": ExtResource("4_6y3l8")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_hph1t"]
resource_name = "Morir"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminarme"
}]
}

[sub_resource type="Animation" id="Animation_mc1cr"]
resource_name = "Move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 14.8071,
"start_offset": 11.7743,
"stream": ExtResource("4_6y3l8")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_altes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_lk4tj"]
resource_name = "Spawn"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enablePlay"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knegi"]
_data = {
"Atacar": SubResource("Animation_l55uh"),
"Destruir": SubResource("Animation_dsspr"),
"Idle": SubResource("Animation_xisp1"),
"Morir": SubResource("Animation_hph1t"),
"Move": SubResource("Animation_mc1cr"),
"RESET": SubResource("Animation_altes"),
"Spawn": SubResource("Animation_lk4tj")
}

[sub_resource type="Animation" id="Animation_mploj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_usmea"]
resource_name = "vibe"
length = 0.88
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44, 0.55, 0.66, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhtlj"]
_data = {
"RESET": SubResource("Animation_mploj"),
"vibe": SubResource("Animation_usmea")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nfi5m"]
shader = ExtResource("5_fk6kd")
shader_parameter/new_colour = Color(1, 1, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_ca15g"]
viewport_path = NodePath("SubViewport")

[node name="Iluminado" type="CharacterBody3D" groups=["Oscuro"]]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_ra42g")

[node name="SensorTrabajador" parent="." instance=ExtResource("2_ci1ri")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 2.81908, -1.02606, 0, 1.02606, 2.81908, -0.0023122, -0.04, 0.0459013)
shape = SubResource("BoxShape3D_w8b4w")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 1.02606, 2.81908, 0, -2.81908, 1.02606, 0, 0, 0)
layers = 64
sorting_offset = 2.0
texture = ExtResource("3_h2dia")
hframes = 12
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_knegi")
}

[node name="SensorOscuro" parent="." instance=ExtResource("2_ci1ri")]
collision_layer = 0
collision_mask = 32

[node name="SensorMineral" parent="." instance=ExtResource("2_ci1ri")]
collision_layer = 0
collision_mask = 2

[node name="Influencia" type="Sprite3D" parent="."]
transform = Transform3D(3.6, 0, 0, 0, -1.57361e-07, -3.6, 0, 3.6, -1.57361e-07, 0, -0.1, 0)
sorting_offset = -2.0
texture = ExtResource("4_jvke4")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(120, 120)
render_target_update_mode = 4

[node name="AnimationSoul" type="AnimationPlayer" parent="SubViewport"]
libraries = {
"": SubResource("AnimationLibrary_bhtlj")
}

[node name="Sprite2D" type="Sprite2D" parent="SubViewport"]
material = SubResource("ShaderMaterial_nfi5m")
position = Vector2(60, 64)
texture = ExtResource("6_li1no")
hframes = 8
frame = 1

[node name="IndicadorAlma" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0.378163, -0.979693)
texture = SubResource("ViewportTexture_ca15g")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -20.0
